loading screnn added

--- a/Build_Mate_fe/src/Pages/ProfileCards.css
+++ b/Build_Mate_fe/src/Pages/ProfileCards.css
@@ -213,3 +213,34 @@
     font-size: 14px;
   }
   
+  .loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.progress-bar {
+    width: 60%;
+    max-width: 400px;
+    height: 20px;
+    background-color: #e0e0e0;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.progress {
+    width: 0;
+    height: 100%;
+    background-color: #FF5C35;
+    animation: fill 3s infinite;
+}
+
+@keyframes fill {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
+}
