--- a/Build_Mate_fe/src/Pages/Registration.css
+++ b/Build_Mate_fe/src/Pages/Registration.css
@@ -11,7 +11,7 @@ body {
   height: auto;
   font-family: "Poppins", sans-serif;
   padding: 5%;
-  background-color: #FF6B00;
+  /* background-color: #FF6B00; */
 }
 
 .reg-form1 {
